--- a/Pages/Editar/E_Paciente.razor
+++ b/Pages/Editar/E_Paciente.razor
@@ -43,13 +43,23 @@
         }
 
         body {
-            background-color: white;
+            background-image: url('https://wallpaper.dog/large/903575.jpg');
+            background-attachment: fixed;
+            background-size: cover;
+            opacity:0.9;
         }
     </style>
 </head>
 
-
-<h1>Editar Paciente</h1>
+<body>
+    <RadzenCard class="rz-shadow-7 rz-my-12 rz-mx-auto rz-p-4 rz-p-md-12">
+    <RadzenFieldset>
+            <HeaderTemplate>
+            <span class="d-inline-flex align-items-center align-middle">
+                <RadzenIcon Icon="edit" class="me-1" /><b>Editar Paciente</b>
+            </span>
+        </HeaderTemplate>
+        <ChildContent>
 
 <EditForm model="Paciente">
     <div class="Entrada">
@@ -159,8 +169,10 @@
 
 </EditForm>
 
-
-
+    </ChildContent>
+    </RadzenFieldset>
+    </RadzenCard>
+</body>
 @code {
 
     [Parameter]
