--- a/Pages/Farmacia/R_Salida.razor
+++ b/Pages/Farmacia/R_Salida.razor
@@ -43,7 +43,10 @@
 
 
         body {
-            background-color: white;
+            background-image: url('https://wallpaper.dog/large/903575.jpg');
+            background-attachment: fixed;
+            background-size: cover;
+            opacity:0.9;
         }
     </style>
 </head>
@@ -51,7 +54,14 @@
 <body>
     
 
-<h1>Salidas</h1>
+    <RadzenCard class="rz-shadow-7 rz-my-12 rz-mx-auto rz-p-4 rz-p-md-12">
+    <RadzenFieldset>
+            <HeaderTemplate>
+            <span class="d-inline-flex align-items-center align-middle">
+                <RadzenIcon Icon="add" class="me-1" /><b>Nuevo Salida</b>
+            </span>
+        </HeaderTemplate>
+        <ChildContent>
 
     <RadzenDropDown AllowClear="true" TValue="int"  @bind-Value="salida.ArticuloID"
     FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" AllowFiltering="true"
@@ -78,7 +88,8 @@
             style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;"
             @onclick="Guardar">Registrar</button>
     </center>
-
+    </ChildContent>
+    </RadzenFieldset>
 <RadzenDataGrid AllowFiltering="true" AllowColumnResize="true" AllowAlternatingRows="false" FilterMode="FilterMode.Advanced"
     AllowGrouping="true" AllowSorting="true" AllowPaging="true" PagerHorizontalAlign="HorizontalAlign.Left"
     Data="SalidaBLL.GetList()" TItem="Salida" ColumnWidth="300px" LogicalFilterOperator="LogicalFilterOperator.Or" ShowPagingSummary="true">
@@ -98,7 +109,7 @@
         </Columns>
 
     </RadzenDataGrid>
-
+    </RadzenCard>
 </body>
 @code {
     public Salida salida { get; set; } = new Salida();
