--- a/Pages/Generadores/Compras.razor
+++ b/Pages/Generadores/Compras.razor
@@ -42,6 +42,12 @@
         border-radius: 15px;
         width: 100%;
     }
+                    body {
+            background-image: url('https://wallpaper.dog/large/903575.jpg');
+            background-attachment: fixed;
+            background-size: cover;
+            opacity:0.9;
+        }
 
     </style>
 </head>
