--- a/Pages/Registros/R_EmergenciaA.razor
+++ b/Pages/Registros/R_EmergenciaA.razor
@@ -1,7 +1,6 @@
 @page "/R_EmergenciaA"
 @using DrEmergencias;
 
-<h1>Nueva Emergencia Asegurada</h1>
 
 @inject NotificationService notificationService
 @inject EmergenciaABLL EmergenciaA
@@ -44,11 +43,25 @@
         #Hallazgos RadzenTextBox {
             width: 100%;
         }
+                body {
+            background-image: url('https://wallpaper.dog/large/903575.jpg');
+            background-attachment: fixed;
+            background-size: cover;
+            opacity:0.9;
+        }
     </style>
 
 </head>
 
 <body >
+    <RadzenCard class="rz-shadow-7 rz-my-12 rz-mx-auto rz-p-4 rz-p-md-12">
+    <RadzenFieldset>
+            <HeaderTemplate>
+            <span class="d-inline-flex align-items-center align-middle">
+                <RadzenIcon Icon="emergency" class="me-1" /><b>Registrar Emergencias</b>
+            </span>
+        </HeaderTemplate>
+        <ChildContent>
 
     <div class="Form">
 <RadzenTemplateForm TItem="EmergenciaA" Data="emergencia" Submit="Guardar" >
@@ -235,6 +248,9 @@
     </div>
     </RadzenTemplateForm>
     </div>
+        </ChildContent>
+    </RadzenFieldset>
+    </RadzenCard>
     </body>                             
 
 @code {
