--- a/Pages/Suplidores/ConsultarSuplidor.razor
+++ b/Pages/Suplidores/ConsultarSuplidor.razor
@@ -2,13 +2,9 @@
 
 
 
-
-
-<h3>Consultar suplidor</h3>
-
-
 @inject SuplidorBLL Suplidor
-@inject DialogService Dialog
+@inject IJSRuntime IJS
+@inject DialogService DialogService
 
 
 <head>
@@ -47,10 +43,37 @@
         width: 100%;
     }
 
+            body {
+            background-image: url('https://wallpaper.dog/large/903575.jpg');
+            background-attachment: fixed;
+            background-size: cover;
+            opacity:0.9;
+        }
+                .Entrada select {
+            width: 200px;
+            height: 35px;
+            border-radius: 50px;
+            background-color: #D9D9D9;
+            border-color: #D9D9D9;
+            border: 15px;
+            margin: 5px;
+        }
+
     </style>
 </head>
     
+    <body>
+    
+    <RadzenCard class="rz-shadow-7 rz-my-12 rz-mx-auto rz-p-4 rz-p-md-12">
+    <RadzenFieldset>
+            <HeaderTemplate>
+            <span class="d-inline-flex align-items-center align-middle">
+                <RadzenIcon Icon="search" class="me-1" /><b>Consultar Suplidor</b>
+            </span>
+        </HeaderTemplate>
+        <ChildContent>
 
+    <RadzenButton ButtonStyle="ButtonStyle.Secondary" Click="ShowInlineDialog" ><RadzenIcon Icon="print"/>Generar Reporte</RadzenButton>
     <RadzenDataGrid AllowFiltering="true" AllowColumnResize="true" AllowAlternatingRows="false" FilterMode="FilterMode.Advanced"
     AllowGrouping="true" AllowSorting="true" AllowPaging="true" PagerHorizontalAlign="HorizontalAlign.Left"
     Data="Suplidor.GetList()" TItem="Suplidor" ColumnWidth="300px" LogicalFilterOperator="LogicalFilterOperator.Or" ShowPagingSummary="true">
@@ -69,40 +92,42 @@
 
     </RadzenDataGrid>
 
-    <div class="col-2 mt-4 float-right">
-                <button @onclick="ShowInlineDialog" class="btn btn-outline-primary" type="button"> <i
-                        class="bi bi-printer" />Imprimir</button>
-    </div>
+
+        </ChildContent>
+    </RadzenFieldset>
+    </RadzenCard>
+    </body>
 
 @code {
 
     private List<Suplidor> Supliers {get; set;} = new List<Suplidor>();
     
 
-    protected override void OnInitialized()
-    {
-        Supliers = Suplidor.GetList();
-    }
-    byte[]? reportData;
-    string pdfContent = "";
+    public string eleccion{get;set;}
+    public string[] opciones {get;set;} = {"Hoy","Esta Semana","Ultimos 15 dias","Este mes","Este año","Todos"};
+    
     async Task ShowInlineDialog()
     {
-        RptSuplidor rptResult = new RptSuplidor();
-        reportData = rptResult.Report(Supliers);
-        pdfContent = "data:application/pdf;base64, " + System.Convert.ToBase64String(reportData);
-        var result = await Dialog.OpenAsync("Reporte de Jugadas", ds => @<div>
+        var result = await DialogService.OpenAsync("Generar Reporte", ds =>
+        @<div>
+            <div class="row">
+                <div class="Entrada col">
+                <label for="Persona">Rango de Tiempo</label>
+                        <select id="Persona" name="Persona" @bind="eleccion">
+                        @foreach (var item in opciones)
+                        {
+                            <option value="@item"> @item</option>
+                        }
+                    </select>
+                    <RadzenButton ButtonStyle="ButtonStyle.Secondary" Click="Imprimir"  ><RadzenIcon Icon="print"/>Imprimir</RadzenButton>
+                </div>
+            </div>
+        </div>);
+    }
 
-            @if (reportData is { })
-                {
-                    <object data="@pdfContent" width="800px" height="300px" name="_blank" />
-
-                }
-
-        </div>
-    , new DialogOptions() { Width = "850px", Height = "400px", Resizable = false, Draggable = false });
-
-    
-
+    public async Task Imprimir()
+    {
+        await IJS.InvokeAsync<object>("open", new object[] { $"/Suplidores/{Array.IndexOf(opciones, eleccion)}","_blank"});
     }
 }
 
