--- a/Pages/Vistas/V_Paciente.razor
+++ b/Pages/Vistas/V_Paciente.razor
@@ -41,15 +41,24 @@
             margin: 5px;
         }
     
-    body
-    {
-        background-color: white;
-    }
+        body {
+            background-image: url('https://wallpaper.dog/large/903575.jpg');
+            background-attachment: fixed;
+            background-size: cover;
+            opacity:0.9;
+        }
         </style>
     </head>
 
     <body>
-        <h1>Ver Paciente</h1>
+    <RadzenCard class="rz-shadow-7 rz-my-12 rz-mx-auto rz-p-4 rz-p-md-12">
+    <RadzenFieldset>
+            <HeaderTemplate>
+            <span class="d-inline-flex align-items-center align-middle">
+                <RadzenIcon Icon="person" class="me-1" /><b>Paciente</b>
+            </span>
+        </HeaderTemplate>
+        <ChildContent>
 
   <EditForm model="Paciente">
     <div class="Entrada">
@@ -152,14 +161,12 @@
     <center>
         <a href="/E_Paciente/@PacienteID"> <button type="button" class="btn btn-primary" style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;" >Editar</button></a>
         <a href="/"><button type="button" class="btn btn-danger" style="padding-left: 50px;padding-right: 50px; border-radius:50px; margin:10px;" @onclick="Eliminar">Eliminar</button></a>
-        <div class="col-2 mt-4 float-right">
-                <button @onclick="Imprimir" class="btn btn-outline-primary" type="button"> <i
-                        class="bi bi-printer" />Imprimir</button>
-        </div>
     </center>
 
     </EditForm>
-    
+            </ChildContent>
+    </RadzenFieldset>
+    </RadzenCard>
 </body>
 
 @code {
@@ -201,10 +208,5 @@
     public void Eliminar(){
         Pacientes.hidden(this.paciente);
         ShowNotification(new NotificationMessage { Severity = NotificationSeverity.Error, Summary = "Registro Actualizado", Detail = "Eliminado con Exito", Duration = 4000 });
-    }
-
-    public async Task Imprimir()
-    {
-        IJS.InvokeAsync<object>("open", new object[] { $"/I_Paciente/{this.paciente.PacienteID}","_blank"});
     }
 }
