--- a/Pages/Editar/E_EmergenciaA.razor
+++ b/Pages/Editar/E_EmergenciaA.razor
@@ -38,7 +38,12 @@
             width: 100%;
             
         }
-
+        body {
+            background-image: url('https://wallpaper.dog/large/903575.jpg');
+            background-attachment: fixed;
+            background-size: cover;
+            opacity:0.9;
+        }
         .Form {
             display: block;
         }
@@ -51,7 +56,14 @@
 </head>
 
 <body >
-
+    <RadzenCard class="rz-shadow-7 rz-my-12 rz-mx-auto rz-p-4 rz-p-md-12">
+    <RadzenFieldset>
+            <HeaderTemplate>
+            <span class="d-inline-flex align-items-center align-middle">
+                <RadzenIcon Icon="edit" class="me-1" /><b>Editar Emergencia Asegurada</b>
+            </span>
+        </HeaderTemplate>
+        <ChildContent>
     <div class="Form">
            <div>
                 <br>
@@ -228,6 +240,9 @@
                 style="padding-left: 50px;padding-right: 50px; border-radius:50px; margin:10px;">Cancelar</button></a>
     </center>
     </div>
+        </ChildContent>
+    </RadzenFieldset>
+    </RadzenCard>
     </body>                             
 
 @code {
