--- a/Pages/Registros/R_Emergencia.razor
+++ b/Pages/Registros/R_Emergencia.razor
@@ -1,5 +1,4 @@
 @page "/R_Emergencia"
-<h1>Nueva Emergencia</h1>
 @inject NotificationService notificationService
 @inject EmergenciaBLL emergenciaBll
 @inject PacienteBLL Paciente
@@ -25,6 +24,12 @@
         .Entrada label {
             margin: 5px;
         }
+        body {
+            background-image: url('https://wallpaper.dog/large/903575.jpg');
+            background-attachment: fixed;
+            background-size: cover;
+            opacity:0.9;
+        }
 
         .Entrada textarea {
             background-color: #D9D9D9;
@@ -46,10 +51,16 @@
 </head>
 
 <body>
+    <RadzenCard class="rz-shadow-7 rz-my-12 rz-mx-auto rz-p-4 rz-p-md-12">
+    <RadzenFieldset>
+            <HeaderTemplate>
+            <span class="d-inline-flex align-items-center align-middle">
+                <RadzenIcon Icon="add" class="me-1" /><b>Nueva Emergencias</b>
+            </span>
+        </HeaderTemplate>
+        <ChildContent>
+
 <RadzenTemplateForm TItem="Emergencia" Data="emergencia" Submit="Guardar" >
-
-
-
 
     <div class="Form" style="z-index: 1;">
 
@@ -201,6 +212,9 @@
             style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;">Registrar</RadzenButton>
     </center>
   </RadzenTemplateForm >  
+    </ChildContent>
+    </RadzenFieldset>
+    </RadzenCard>
 </body>
 @code {
     public Emergencia emergencia { get; set; } = new Emergencia();
