--- a/Pages/Vistas/V_EmergenciaA.razor
+++ b/Pages/Vistas/V_EmergenciaA.razor
@@ -42,13 +42,26 @@
         #Hallazgos labe> {
             width: 100%;
         }
+        body {
+            background-image: url('https://wallpaper.dog/large/903575.jpg');
+            background-attachment: fixed;
+            background-size: cover;
+            opacity:0.9;
+        }
     </style>
 
 </head>
 
 <body>
 
-
+    <RadzenCard class="rz-shadow-7 rz-my-12 rz-mx-auto rz-p-4 rz-p-md-12">
+    <RadzenFieldset>
+            <HeaderTemplate>
+            <span class="d-inline-flex align-items-center align-middle">
+                <RadzenIcon Icon="shield" class="me-1" /><b>Emergencia Asegurada</b>
+            </span>
+        </HeaderTemplate>
+        <ChildContent>
 
     <div class="RHeader" style="z-index: -1;">
     </div>
@@ -230,6 +243,10 @@
         <a href="/E_EmergenciaAA/@emergenciaA.OrdenID"> <button type="button" class="btn btn-primary" style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;" >Editar</button></a>
         <a href="/"><button type="button" class="btn btn-danger" style="padding-left: 50px;padding-right: 50px; border-radius:50px; margin:10px;" @onclick="Eliminar">Eliminar</button></a>
     </center>
+
+            </ChildContent>
+    </RadzenFieldset>
+    </RadzenCard>
 </body>
 
 @code {
